move tmux customization to my own repo

--- a/dot_config/tmux/tmux.conf
+++ b/dot_config/tmux/tmux.conf
@@ -43,7 +43,7 @@ set -g @plugin 'christoomey/vim-tmux-navigator'
 # prettify
 # set -g @plugin 'joshmedeski/tmux-nerd-font-window-name' # interesting plugin, but needs more polish to work with window rename
 set -g @plugin 'tmux-plugins/tmux-cpu'
-set -g @plugin 'catppuccin/tmux#v2.1.3' # See https://github.com/catppuccin/tmux/tags for additional tags
+set -g @plugin 'l1ttleflyyy/tmux' # See https://github.com/catppuccin/tmux
 
 #set -g @continuum-restore 'on'
 set -g @continuum-save-interval '15'
@@ -75,9 +75,6 @@ set -g @catppuccin_host_text             " #h"
 
 # Load catppuccin
 run '#{TMUX_PLUGIN_MANAGER_PATH}/tmux/catppuccin.tmux'
-
-source -F '#{TMUX_PLUGIN_MANAGER_PATH}/custom_mod/my_cpu.conf'
-source -F '#{TMUX_PLUGIN_MANAGER_PATH}/custom_mod/my_ram.conf'
 
 # status bar frequency
 set-option -g status-interval 1
