update tmux theme

--- a/dot_config/tmux/tmux.conf
+++ b/dot_config/tmux/tmux.conf
@@ -72,6 +72,7 @@ set -g @catppuccin_status_module_text_bg '#{E:@thm_mantle}'
 set -g @catppuccin_status_background     'default'
 
 set -g @catppuccin_host_text             " #h"
+set -g @catppuccin_host_color            "#{E:@thm_maroon}"
 
 # Load catppuccin
 run '#{TMUX_PLUGIN_MANAGER_PATH}/tmux/catppuccin.tmux'
@@ -80,14 +81,14 @@ run '#{TMUX_PLUGIN_MANAGER_PATH}/tmux/catppuccin.tmux'
 set-option -g status-interval 1
 
 # Make the status line pretty and add some modules
-set -g status-right-length 100
-set -g status-left-length 100
+set -g status-right-length  120
+set -g status-left-length    80
 
-set -g status-left "#{E:@catppuccin_status_session} "
+set -g status-left "#{E:@catppuccin_status_host}"
 
 set -gF status-right "#{E:@catppuccin_status_my_cpu}"
 set -agF status-right "#{E:@catppuccin_status_my_ram}"
-set -ag status-right "#{E:@catppuccin_status_host}"
+set -agF status-right "#{E:@catppuccin_status_my_disk}"
 
 # Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
 run '#{TMUX_PLUGIN_MANAGER_PATH}/tpm/tpm'
