--- a/dot_config/tmux/tmux.conf
+++ b/dot_config/tmux/tmux.conf
@@ -71,6 +71,7 @@ set -g @catppuccin_window_status_style      "rounded"
 set -g @catppuccin_status_module_text_bg '#{E:@thm_mantle}'
 set -g @catppuccin_status_background     'default'
 
+set -g @catppuccin_host_icon             " "
 set -g @catppuccin_host_text             " #h"
 set -g @catppuccin_host_color            "#{E:@thm_maroon}"
 
