update tmux theme

--- a/dot_config/tmux/tmux.conf
+++ b/dot_config/tmux/tmux.conf
@@ -73,7 +73,7 @@ set -g @catppuccin_status_background     'default'
 
 set -g @catppuccin_host_icon             " "
 set -g @catppuccin_host_text             " #h"
-set -g @catppuccin_host_color            "#{E:@thm_maroon}"
+set -g @catppuccin_host_color            "#{E:@thm_green}"
 
 # Load catppuccin
 run '#{TMUX_PLUGIN_MANAGER_PATH}/tmux/catppuccin.tmux'
